<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_theme"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/drawer_theme" />
    <item
        android:id="@+id/nav_tutorial"
        android:icon="@android:drawable/ic_menu_help"
        android:title="@string/drawer_tutorial" />
    <item
        android:id="@+id/nav_haptic"
        android:checkable="true"
        android:icon="@android:drawable/ic_lock_silent_mode_off"
        android:title="@string/drawer_haptic_on" />
    <item
        android:id="@+id/nav_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/drawer_about" />
    <item
        android:id="@+id/nav_logs"
        android:icon="@android:drawable/ic_menu_agenda"
        android:title="日志" />
</menu>
